# ComputerGraphics

./: README.md
lab11/: CMakeLists.txt  README.md  TASK_README.md  glad.c  lab12.cpp  lab13.cpp  lab14.cpp  main.cpp
lab11/3d_models/Free_Fence9OBJ/: objFence.mtl
lab11/3d_models/Free_Fence9OBJ/.mayaSwatches/: fence.mb.swatches  fenceRender.mb.swatches
lab11/3d_models/Free_Fence9OBJ/textures/: germany010_sRGB_ACEScg.jpg.tx  germany010b_sRGB_ACEScg.jpg.tx
lab11/3d_models/Free_Fence9OBJ/textures/.mayaSwatches/: germany010.jpg_hcm.swatch  germany010b.jpg_hcm.swatch  germany_white_final.jpg_hcm.swatch  hungary021.jpg_hcm.swatch  hungary021b.jpg_hcm.swatch
lab11/3d_models/coffee_table/: coffee_table.mtl
lab11/3d_models/golf_ball/: golf_ball.mtl
lab11/3d_models/old_stool/: old_stool.mtl
lab11/3d_models/soda_can_obj/: soda_can.mtl
lab11/include/glad/: glad.h
lab2/: README.md  pom.xml
lab2/src/main/java/ru/usernamedrew/: App.java
lab2/src/main/java/ru/usernamedrew/tasks/: GreyShades.java  Histogram.java  RGBtoHSV.java
lab2/src/test/java/ru/usernamedrew/: AppTest.java
lab3/: README.md  pom.xml
lab3/src/main/java/ru/usernamedrew/: App.java  BarycentricTriangle.java  BoundaryTracer.java  DrawingLine.java  FloodFill.java  GradientTriangle.java  PatternFloodFill.java
lab4/: README.md  pom.xml
lab4/src/main/java/ru/usernamedrew/: App.java
lab4/src/main/java/ru/usernamedrew/model/: Polygon.java
lab4/src/main/java/ru/usernamedrew/util/: PolygonEditor.java
lab5/: README.md  bush_enhanced.txt  dragon.txt  koch.txt  koch_island.txt  pom.xml  tree1.txt  tree2.txt  tree3_enhanced.txt  tree4_enhanced.txt
lab5/src/main/java/ru/usernamedrew/: App.java
lab5/src/main/java/ru/usernamedrew/bezier/: BezierSpline.java
lab5/src/main/java/ru/usernamedrew/lsystem/: LSystem.java  LSystemParser.java
lab5/src/main/java/ru/usernamedrew/midpoint_displacement/: Midpoint.java
lab5/src/main/java/ru/usernamedrew/models/: LineSegment.java  Point.java  TurtleState.java
lab5/src/main/java/ru/usernamedrew/ui/: BezierFrame.java  LSystemFractalPanel.java  MainFrame.java
lab6/: README.md  pom.xml
lab6/lab7/: README.md
lab6/lab8/: README.md
lab6/lab9/: README.md
lab6/src/main/java/ru/usernamedrew/: App.java
lab6/src/main/java/ru/usernamedrew/controller/: CameraController.java
lab6/src/main/java/ru/usernamedrew/model/: Camera.java  Face.java  Light.java  Point3D.java  Polyhedron.java  RegularPolyhedra.java  RevolutionSurfaceFactory.java  SurfaceFactory.java
lab6/src/main/java/ru/usernamedrew/ui/: GraphicsPanel.java  MainFrame.java
lab6/src/main/java/ru/usernamedrew/util/: AffineTransform.java  PolyhedronIO.java  ProjectionTransformer.java  ZBuffer.java
